# AcoSemantic-TR

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  api.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo_samples/: README.md  batch_summary.json  batch_summary.md  demo_cases.json  demo_results.json  demo_results_before_stress035.json  review_false_positives.csv  review_false_positives.reviewed.csv
docs/: architecture.md
scripts/: download_extract_ravdess.py  fetch_ravdess_demo.py  fetch_ravdess_hf.py  generate_batch_summary.py  run_demo_analysis.py  select_and_copy_tur_ev.py  test_api_smoke.py  threshold_sweep.py
src/: __init__.py  analysis.py  audio_utils.py  config.py  decision.py  evaluation.py  models.py  prosody.py
tests/: test_config.py  test_decision.py  test_evaluation.py  test_prosody.py
