[project]
name = "acosemantic-tr"
version = "1.0.0"
description = "Acoustic-semantic emotion-discordance analysis for Turkish speech."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nur Yağmur Tuncer" }]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]  # B008: FastAPI File()/Depends() defaults are idiomatic

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*" = ["E402"]  # scripts set sys.path before importing local modules

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
